--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.digilinq.payment.gateway</groupId>
-        <artifactId>payment-gateway-parent</artifactId>
+        <groupId>org.digilinq.platform.users</groupId>
+        <artifactId>users-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>payment-gateway-repository</artifactId>
+    <artifactId>users-repository</artifactId>
 
     <dependencies>
         <dependency>
