--- a/service/pom.xml
+++ b/service/pom.xml
@@ -4,24 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.digilinq.payment.gateway</groupId>
-        <artifactId>payment-gateway-parent</artifactId>
+        <groupId>org.digilinq.platform.users</groupId>
+        <artifactId>users-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>payment-gateway-service</artifactId>
+    <artifactId>users-service</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>payment-gateway-api</artifactId>
+            <artifactId>users-api</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>payment-gateway-repository</artifactId>
+            <artifactId>users-repository</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
