Spring Boot Testing with H2 database

--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -4,8 +4,8 @@ spring:
     activate:
       on-profile: local
   datasource:
-    url: jdbc:postgresql://localhost:32424/digilinq
-    username: digiuser
-    password: digipass
+    url: jdbc:postgresql://localhost:5432/digilinq
+    username: digilinq
+    password: 123456
     driver-class-name: org.postgresql.Driver
 ---
