--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -9,3 +9,13 @@ spring:
     password: 123456
     driver-class-name: org.postgresql.Driver
 ---
+spring:
+  config:
+    activate:
+      on-profile: docker
+  datasource:
+    url: jdbc:postgresql://${{POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}
+    username: ${POSTGRES_USERNAME}
+    password: ${POSTGRES_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+---
