--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SPRING_PROFILES_ACTIVE=docker
-POSTGRES_HOST=172.17.0.1
+POSTGRES_HOST=host.docker.internal
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=digilinq
-POSTGRES_USERNAME=digiuser
+POSTGRES_USERNAME=digilinq
 POSTGRES_PASSWORD=123456
