--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -1,3 +1,9 @@
+logging:
+  level:
+    org.springframework.web: INFO
+    org.hibernate: DEBUG
+    com.zaxxer.hikari.HikariConfig: DEBUG
+    com.zaxxer.hikari: TRACE
 ---
 spring:
   config:
@@ -14,7 +20,7 @@ spring:
     activate:
       on-profile: docker
   datasource:
-    url: jdbc:postgresql://${{POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}
+    url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}
     username: ${POSTGRES_USERNAME}
     password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
