--- a/web/src/test/resources/application-test.yaml
+++ b/web/src/test/resources/application-test.yaml
@@ -14,6 +14,6 @@ spring:
         format_sql: true
 logging:
   level:
-    org:
-      hibernate:
-        sql: info
+    org.springframework.web: DEBUG
+    org.hibernate.sql: info
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
