--- a/.github/workflows/build-and-create-artifact.yaml
+++ b/.github/workflows/build-and-create-artifact.yaml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   build:
+    name: Build maven project
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -22,7 +23,10 @@ jobs:
           path: staging
 
   create-docker-image:
+    name: Create docker image
     runs-on: ubuntu-latest
+    needs:
+      - build
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3
