--- a/.github/workflows/build-and-create-artifact.yaml
+++ b/.github/workflows/build-and-create-artifact.yaml
@@ -36,3 +36,12 @@ jobs:
       - run: pwd
       - run: ls -la
       - run: cat Dockerfile
+      - name: Build and push Docker Image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          push: false
+          tags: 1.0.0
+          labels: 1.0.0
+      - run: docker images
