--- a/.github/workflows/build-and-create-artifact.yaml
+++ b/.github/workflows/build-and-create-artifact.yaml
@@ -42,6 +42,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: false
-          tags: 1.0.0
+          tags: users-micro-service:1.0.0
           labels: 1.0.0
       - run: docker images
