--- a/.github/workflows/build-and-create-artifact.yaml
+++ b/.github/workflows/build-and-create-artifact.yaml
@@ -24,18 +24,25 @@ jobs:
           path: staging
 
   create-docker-image:
-    name: Create docker image
+    name: Create docker image and push to Docker Hub
     runs-on: ubuntu-latest
     needs:
       - build
+#    permissions:
+#      contents: read
+#      packages: write
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
           name: Package
-      - run: pwd
-      - run: ls -la
-      - run: cat Dockerfile
+      - run: echo hello
+#      - name: Login to container repository
+#        uses: docker/login-action@v2
+#        with:
+#          registry: ${{ env.REGISTRY }}
+#          username: ${{ github.actor }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push Docker Image
         uses: docker/build-push-action@v4
         with:
@@ -44,4 +51,3 @@ jobs:
           push: false
           tags: users-micro-service:1.0.0
           labels: 1.0.0
-      - run: docker images
