--- a/.github/workflows/build-and-create-artifact.yaml
+++ b/.github/workflows/build-and-create-artifact.yaml
@@ -37,6 +37,8 @@ jobs:
         with:
           name: Package
       - run: echo hello
+      - run: echo ${{ secrets.DOCKER_USERNAME }}
+      - run: echo ${{ secrets.DOCKER_PASSWORD }}
 #      - name: Login to container repository
 #        uses: docker/login-action@v2
 #        with:
