--- a/.github/workflows/build-and-create-artifact.yaml
+++ b/.github/workflows/build-and-create-artifact.yaml
@@ -36,15 +36,12 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: Package
-      - run: echo hello
-      - run: echo ${{ secrets.DOCKER_USERNAME }}
-      - run: echo ${{ secrets.DOCKER_PASSWORD }}
-#      - name: Login to container repository
-#        uses: docker/login-action@v2
-#        with:
-#          registry: ${{ env.REGISTRY }}
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to container repository
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build and push Docker Image
         uses: docker/build-push-action@v4
         with:
