--- a/.github/workflows/build-and-create-artifact.yaml
+++ b/.github/workflows/build-and-create-artifact.yaml
@@ -39,14 +39,15 @@ jobs:
       - name: Login to container repository
         uses: docker/login-action@v2
         with:
+          registry: ${{ env.REGISTRY }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          registry: ${{ env.REGISTRY }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+#          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: digilinq/users-microservice
       - name: Build and push Docker Image
         uses: docker/build-push-action@v4
         with:
