Add new env for registry

--- a/.github/workflows/build-and-create-artifact.yaml
+++ b/.github/workflows/build-and-create-artifact.yaml
@@ -2,6 +2,10 @@ name: Java CI
 
 on: [push]
 
+env:
+#  REGISTRY: docker.io
+  REGISTRY: docker.io
+
 jobs:
   build:
     name: Build maven project
