--- a/.github/workflows/build-and-create-artifact.yaml
+++ b/.github/workflows/build-and-create-artifact.yaml
@@ -11,18 +11,25 @@ jobs:
     name: Build maven project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-      - name: Build with Maven
+      -
+        name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
-      - run: mkdir staging && cp web/target/*.jar staging
-      - run: cp deployment/Dockerfile staging
-      - uses: actions/upload-artifact@v3
+      -
+        run: mkdir staging && cp web/target/*.jar staging
+      -
+        run: cp deployment/Dockerfile staging
+      -
+        uses: actions/upload-artifact@v3
         with:
           name: Package
           path: staging
@@ -36,23 +43,27 @@ jobs:
 #      contents: read
 #      packages: write
     steps:
-      - name: Download artifact
+      -
+        name: Download artifact
         uses: actions/download-artifact@v3
         with:
           name: Package
-      - name: Login to container repository
+      -
+        name: Login to container repository
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Extract metadata (tags, labels) for Docker
+      -
+        name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
         with:
 #          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           images: digilinq/${{ env.IMAGE_NAME }}
-      - name: Build and push Docker Image
+      -
+        name: Build and push Docker Image
         uses: docker/build-push-action@v4
         with:
           context: .
