--- a/.github/workflows/build-and-create-artifact.yaml
+++ b/.github/workflows/build-and-create-artifact.yaml
@@ -1,7 +1,9 @@
 name: Java CI
 
-on: [push]
-
+on:
+  push:
+    branches:
+      - 'master'
 env:
   REGISTRY: docker.io
   IMAGE_NAME: users-microservice
@@ -50,6 +52,7 @@ jobs:
           name: Package
       -
         name: Login to container repository
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -68,6 +71,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
