--- a/.github/workflows/build-and-create-artifact.yaml
+++ b/.github/workflows/build-and-create-artifact.yaml
@@ -65,7 +65,13 @@ jobs:
         uses: docker/metadata-action@v4
         with:
 #          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          images: digilinq/${{ env.IMAGE_NAME }}
+          images: |
+            digilinq/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
       -
         name: Build and push Docker Image
         uses: docker/build-push-action@v4
