--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -7,5 +7,5 @@ jobs:
   detect-vulnerabilities:
     runs-on: ubuntu-latest
     steps:
-      - run: ls
-      - run: pwd
+      - run: echo "Event Name: ${{ github.event_name }}"
+
