--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -7,5 +7,6 @@ jobs:
   detect-vulnerabilities:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Event Name: ${{ github.event_name }}"
+      - run: >-
+          echo "Event Name: ${{ github.event_name }}"
 
