--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -7,6 +7,9 @@ jobs:
   detect-vulnerabilities:
     runs-on: ubuntu-latest
     steps:
-      - run: >-
+      -
+        name: Print Event Name
+        run: >-
+          echo "Event Name: ${{ github.event_name }}"
           echo "Event Name: ${{ github.event_name }}"
 
