--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -2,7 +2,7 @@
 # job2: clean code and code smells and test coverage with sonar
 # job3: code quality with sigrid
 name: Code quality check
-on: [push]
+on: [push,pull_request]
 env:
   IMAGE_NAME: users-microservice
 jobs:
