Run project locally

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -10,4 +10,12 @@
     </parent>
 
     <artifactId>users-api</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
