--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -1,19 +1,27 @@
 logging:
   level:
-    org.springframework.web: INFO
-    org.hibernate: DEBUG
-    com.zaxxer.hikari.HikariConfig: DEBUG
-    com.zaxxer.hikari: TRACE
+    root: INFO
+#    org.springframework.web: INFO
+#    org.hibernate: DEBUG
+#    com.zaxxer.hikari.HikariConfig: DEBUG
+#    com.zaxxer.hikari: TRACE
 ---
 spring:
   config:
     activate:
       on-profile: local
   datasource:
-    url: jdbc:postgresql://localhost:5432/digilinq
-    username: digilinq
+    url: jdbc:postgresql://localhost:5432/eightbits
+    username: eightbits
     password: 123456
     driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        format_sql: true
 ---
 spring:
   config:
