Print feature branch href

--- a/.github/workflows/print-event.yaml
+++ b/.github/workflows/print-event.yaml
@@ -5,11 +5,13 @@ jobs:
     name: Print event
     runs-on: ubuntu-latest
     steps:
-      - name: Dump GitHub context
+      -
+        name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: |
           echo "$GITHUB_CONTEXT"
       -
+        name: Print feature branches ref
         if: startsWith(github.head_ref, 'feature/')
         run: echo "The head of this PR starts with 'feature/'"
