--- a/.github/workflows/print-events-required-actions.yaml
+++ b/.github/workflows/print-events-required-actions.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       -
         name: Print href
-        run: echo "${{ github.head_ref }}"
+        run: echo "The href is ${{ github.head_ref }}"
       -
         name: Print feature branches ref
         if: startsWith(github.head_ref, 'feature/')
