Print branch name for push to feature branch two times

--- a/.github/workflows/print-events-required-actions.yaml
+++ b/.github/workflows/print-events-required-actions.yaml
@@ -11,7 +11,9 @@ jobs:
     steps:
       -
         name: Print href
-        run: echo "The ref is ${{ github.ref }}"
+        run: |
+          echo "The ref is ${{ github.ref }}"
+          echo "The ref is ${{ github.ref }}"
       -
         name: Print feature branches ref
         if: startsWith(github.head_ref, 'feature/')
