--- a/.github/workflows/print-events-required-actions.yaml
+++ b/.github/workflows/print-events-required-actions.yaml
@@ -1,3 +1,4 @@
+---
 name: Highlights events
 on:
   push:
@@ -10,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Print href
+        name: Print feature branch name
+        if: github.ref != 'main'
         run: |
           echo "The ref is ${{ github.ref }}"
           echo "The ref is ${{ github.ref }}"
