--- a/.github/workflows/print-feature-branch-events.yaml
+++ b/.github/workflows/print-feature-branch-events.yaml
@@ -9,7 +9,7 @@ on:
     branches:
       - '!master'
       - '!main'
-      - '*'
+      - 'feature/*'
 jobs:
   print-event:
     runs-on: ubuntu-latest
