Create tag on master branch

--- a/.github/workflows/build-and-create-artifact.yaml
+++ b/.github/workflows/build-and-create-artifact.yaml
@@ -3,8 +3,7 @@ name: Java CI
 on:
   push:
     branches:
-      - 'main'
-      - 'feature/*'
+      - master
 env:
   REGISTRY: docker.io
   IMAGE_NAME: users-microservice
