--- a/.github/workflows/create-tag-on-master-branch.yaml
+++ b/.github/workflows/create-tag-on-master-branch.yaml
@@ -2,8 +2,9 @@ name: Create tag on master branch
 on:
   push:
     branches:
-      - master
-      - main
+#      - master
+#      - main
+      - 'test/*'
     tags:
       - 'v*'
 env:
