Create tag on master branch

--- a/.github/workflows/create-tag-on-master-branch.yaml
+++ b/.github/workflows/create-tag-on-master-branch.yaml
@@ -1,12 +1,12 @@
 name: Create tag on master branch
 on:
   push:
-    branches:
+#    branches:
 #      - master
 #      - main
-      - 'test/*'
+#      - 'test/*'
     tags:
-      - 'v*'
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 env:
   REGISTRY: docker.io
   IMAGE_NAME: users-microservice
