--- a/.github/workflows/create-tag-on-master-branch.yaml
+++ b/.github/workflows/create-tag-on-master-branch.yaml
@@ -14,6 +14,7 @@ jobs:
       - run: |
           echo ${{ github.event.base_ref }}
           echo ${{ github.ref }}
+          echo ${{ endsWith(github.event.base_ref, 'main') }}
   build:
     name: Build maven project
     if: endsWith(github.event.base_ref, 'main') == true
