--- a/.github/workflows/create-tag-on-master-branch.yaml
+++ b/.github/workflows/create-tag-on-master-branch.yaml
@@ -4,8 +4,8 @@ on:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
 env:
-#  REGISTRY: docker.io
-  REGISTRY: digilinq
+  REGISTRY: docker.io
+  DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   IMAGE_NAME: users-microservice
 jobs:
   print:
@@ -17,7 +17,7 @@ jobs:
           echo ${{ endsWith(github.event.base_ref, 'main') }}
   build:
     name: Build maven project
-    if: endsWith(github.event.base_ref, 'main') == true
+#    if: endsWith(github.event.base_ref, 'main') == true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -48,22 +48,31 @@ jobs:
           name: Package
       - name: Login to container repository
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
+#          images: ghcr.io/${{ github.repository }}
           images: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+            ${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=ref,event=branch
+#            type=ref,event=branch
+#            type=ref,event=pr
+#            type=semver,pattern={{version}}
+#            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{version}},value=${{ inputs.version }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ inputs.version }}
+            type=semver,pattern={{major}},value=${{ inputs.version }}
+            type=ref,event=branch,suffix=-{{ sha }}
             type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
+          flavor: |
+            latest=false
       - name: Build and push Docker Image
         uses: docker/build-push-action@v4
         with:
