--- a/.github/workflows/create-tag-on-master-branch.yaml
+++ b/.github/workflows/create-tag-on-master-branch.yaml
@@ -72,7 +72,7 @@ jobs:
             type=ref,event=pr
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
           flavor: |
-            latest=false
+            latest=true
       - name: Build and push Docker Image
         uses: docker/build-push-action@v4
         with:
