Start pipeline on PR

--- a/.github/workflows/create-tag-on-master-branch.yaml
+++ b/.github/workflows/create-tag-on-master-branch.yaml
@@ -1,5 +1,9 @@
 name: Create tag on master branch
 on:
+  pull_request:
+    types:
+      - opened
+      - synchronize
   push:
     branches:
       - 'master'
