--- a/.github/workflows/create-tag-on-master-branch.yaml
+++ b/.github/workflows/create-tag-on-master-branch.yaml
@@ -82,6 +82,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [create-docker-image]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Set the Kubernetes context
         uses: azure/k8s-set-context@v3
         with:
