--- a/.github/workflows/push-to-feature-branch.yaml
+++ b/.github/workflows/push-to-feature-branch.yaml
@@ -8,3 +8,6 @@ on:
 jobs:
   build:
     uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@v1
+    with:
+      runner: ubuntu-latest
+      java-version: 17
