--- a/.github/workflows/create-tag-on-master-branch.yaml
+++ b/.github/workflows/create-tag-on-master-branch.yaml
@@ -91,7 +91,7 @@ jobs:
       - name: Deploy to the Kubernetes cluster
         uses: azure/k8s-deploy@v4
         with:
-          namespace: default
+          namespace: tech-innovative
           manifests: |
             manifests/deployment.yml
           images: |
