--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -19,9 +19,8 @@ spec:
           env:
             - name: APP_VERSION
               value: "1.0.0"
-          image: docker.io/digilinq/users-microservice:2.0.0
+          image: docker.io/digilinq/users-microservice
           ports:
             - containerPort: 8080
           resources: {}
       restartPolicy: Always
-status: {}
