--- a/.github/workflows/create-tag-on-master-branch.yaml
+++ b/.github/workflows/create-tag-on-master-branch.yaml
@@ -8,9 +8,9 @@ on:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
 env:
-  REGISTRY: docker.io
-  USERNAME: digilinq
-  PACKAGE: users-microservice
+  REGISTRY: ${{ vars.CONTAINER_REGISTRY }}
+  USERNAME: ${{ vars.DOCKER_HUB_USERNAME }}
+  PACKAGE: ${{ vars.PACKAGE_NAME }}
 jobs:
   build:
     name: Build maven project
@@ -65,8 +65,8 @@ jobs:
             type=ref,event=branch,suffix=-{{ sha }}
             type=ref,event=pr
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
-          flavor: |
-            latest=true
+#          flavor: |
+#            latest=true
       - name: Build and push Docker Image
         uses: docker/build-push-action@v4
         with:
@@ -94,5 +94,6 @@ jobs:
           namespace: tech-innovative
           manifests: |
             manifests/deployment.yml
+            manifests/service.yaml
           images: |
             ${{ needs.create-docker-image.outputs.docker-image }}
