--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -2,17 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: users-microservice
-  name: users-microservice
+    app: users-ms
+  name: users-ms
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: users-microservice
+      app: users-ms
   template:
     metadata:
       labels:
-        app: users-microservice
+        app: users-ms
     spec:
       containers:
         - name: users
