Fix k8s service port

--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -11,6 +11,7 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/name: users-ms
+        app: users-ms
     spec:
       containers:
         - name: users
