--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -13,10 +13,27 @@ management:
     web:
       exposure:
         include: prometheus,health,info,metric
-
 springdoc:
   swagger-ui:
     path: "/swagger-ui.html"
+---
+spring:
+  config:
+    activate:
+      on-profile: prd
+  datasource:
+    url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?currentSchema=users
+    username: ${POSTGRES_USERNAME}
+    password: ${POSTGRES_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
 ---
 spring:
   config:
