Set log level to DEBUG

--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 logging:
   level:
-    root: INFO
-#    org.springframework.web: INFO
-#    org.hibernate: DEBUG
-#    com.zaxxer.hikari.HikariConfig: DEBUG
-#    com.zaxxer.hikari: TRACE
+    root: DEBUG
+    org.springframework.web: INFO
+    org.hibernate: DEBUG
+    com.zaxxer.hikari.HikariConfig: DEBUG
+    com.zaxxer.hikari: TRACE
 
 management:
   server:
