Change the log level to INFO

--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 logging:
   level:
-    root: DEBUG
+    root: INFO
     org.springframework.web: INFO
     org.hibernate: DEBUG
     com.zaxxer.hikari.HikariConfig: DEBUG
