Deploy service monitor

--- a/.github/workflows/create-tag-on-master-branch.yaml
+++ b/.github/workflows/create-tag-on-master-branch.yaml
@@ -98,3 +98,9 @@ jobs:
             manifests/servicemonitor.yaml
           images: |
             ${{ needs.create-docker-image.outputs.docker-image }}
+      - name: Deploy to the Kubernetes cluster
+        uses: azure/k8s-deploy@v4
+        with:
+          namespace: default
+          manifests: |
+            manifests/servicemonitor.yaml
