Disable executor metrics

--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -17,6 +17,9 @@ management:
       tomcat: false
       jdbc: false
       system: false
+      executor: false
+      logback: false
+
   endpoints:
     web:
       exposure:
