Disable spring metrics

--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -19,7 +19,7 @@ management:
       system: false
       executor: false
       logback: false
-
+      spring: false
   endpoints:
     web:
       exposure:
