Enable jvm metrics

--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ management:
   metrics:
     enable:
       all: false
-      jvm: false
+      jvm: true
       hikaricp: false
       tomcat: false
       jdbc: false
