Enable all metrics

--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ management:
     port: 8081
   metrics:
     enable:
-      all: false
+#      all: false
       jvm: true
       hikaricp: false
       tomcat: false
