Use reusable workflow version v3

--- a/.github/workflows/push-to-feature-branch.yaml
+++ b/.github/workflows/push-to-feature-branch.yaml
@@ -7,12 +7,12 @@ on:
       - '!main'
 jobs:
   build:
-    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@v2
+    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@v3
     with:
       runner: ubuntu-latest
       java-version: 17
     secrets:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_TOKEN_1: ${{ secrets.GITHUB_TOKEN }}
 
   maven-build:
     name: Build with Maven
